Bug 104086 - Ignore OpenGL Blacklist checked while use OpenGL for all rendering unchecked, enables OpenGL
Summary: Ignore OpenGL Blacklist checked while use OpenGL for all rendering unchecked,...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.3.3 release
Hardware: All All
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0 target:6.0.5
Keywords:
: 112759 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-11-21 13:14 UTC by Telesto
Modified: 2018-05-27 15:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2016-11-21 13:14:10 UTC
Description:
Ignore OpenGL Blacklist checked while use OpenGL for all rendering unchecked, enables OpenGL

Steps to Reproduce:
1.Start LibreOffice Writer
2.Go to: options --> view
3.Uncheck 'Use OpenGL for all rendering'
4.Check: 'Ignore OpenGL blacklist'

Actual Results:  
OpenGL is enabled

Expected Results:
OpenGL is disabled or 'Use OpenGL for all rendering' should be checked automatically


Reproducible: Always

User Profile Reset: YES

Additional Info:
Version: 5.3.0.0.alpha1+
Build ID: 02ec51c7e0bf9320b32ec73233ecaaf160448776
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; Layout Engine: new; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-11-20_23:12:18
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Aron Budea 2016-11-22 02:55:13 UTC
Confirmed with 5.3 daily build / Windows 7.
I'd vote for 'Use OpenGL for all rendering' checkbox getting checked automatically if 'Ignore OpenGL blacklist' is checked.

In 5.2.3.3 the checkbox is labeled differently, but should behave the same way.
Comment 2 Xisco Faulí 2017-09-29 21:20:33 UTC
*** Bug 112759 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2018-05-23 18:02:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8118a5d2eb1524768784adc0b143b8cc1b9f3f61

tdf#104086 cui: enable OpenGL when ignoring its blacklist

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-05-27 15:52:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e37f748096a7fd7d7a3a07b2393c5f8960cfeb5&h=libreoffice-6-0

tdf#104086 cui: enable OpenGL when ignoring its blacklist

It will be available in 6.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.