tdf#104086 cui: enable OpenGL when ignoring its blacklist

"Ignore OpenGL blacklist" is called "force OpenGL" in the code, so it
make sense that OpenGLHelper::isVCLOpenGLEnabled() returns true in that
case. But the UI suggested that enabling ignore doesn't enable OpenGL
itself.

Fix this by auto-checking the parent UI widget when enabling the
blacklist.

Change-Id: I16bec69aebd645858260850f15ea8e687566fd0e
Reviewed-on: https://gerrit.libreoffice.org/54720
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>